--- a/kadai_tutorial_output/index.html
+++ b/kadai_tutorial_output/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="【JavaScript応用編】簡易的なタイピングゲームです。">
         <meta name="viewport" content="Width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="/kadai_tutorial_output/style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <p id="count" class="count">60</p>
@@ -16,6 +16,6 @@
         <p id="typing-count" class="typing-count"></p>
         
         <button id="start">スタート</button>
-        <script type="text/javascript" src="/kadai_tutorial_output/main.js"></script>
+        <script type="text/javascript" src="/main.js"></script>
     </body>
 </html>
